--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,62 @@
   }
 }
 
+/* Partners Section Styles */
+
+.partners {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+}
+
+.partners:hover .partners-slide {
+  animation-play-state: paused;
+}
+
+.partners-wrapper {
+  display: flex;
+  width: 200%;
+}
+
+.partners-slide {
+  display: flex;
+  animation: slide 35s linear infinite;
+}
+
+.partner-item {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 40px;
+}
+
+.partners-slide img {
+  height: 100px;
+  max-width: 100px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.partner-item p {
+  margin-top: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #c3c3c3;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+.partners-slide img:hover {
+  transform: scale(1.1);
+}
+
+/* Skills Section Styles */
+
